--- a/public/index.html
+++ b/public/index.html
@@ -1,136 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Afiyatna | Portofolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-  </style>
-</head>
-<body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white transition-colors duration-300">
-  <!-- Navbar -->
-  <nav class="fixed w-full bg-white dark:bg-gray-900 shadow z-50">
-    <div class="container mx-auto flex justify-between items-center py-4 px-6">
-      <div class="font-bold text-2xl text-purple-700 dark:text-purple-400">afiyatna</div>
-      <div class="space-x-6 hidden md:block">
-        <a href="#home" class="hover:text-purple-600 font-medium">Home</a>
-        <a href="#about" class="hover:text-purple-600 font-medium">About</a>
-        <a href="projects.html" class="hover:text-purple-600 font-medium">Projects</a>
-        <a href="articles.html" class="hover:text-purple-600 font-medium">Articles</a>
-        <a href="#skills" class="hover:text-purple-600 font-medium">Skills</a>
-        <a href="#contact" class="hover:text-purple-600 font-medium">Contact</a>
-      </div>
-      <button id="dark-toggle" class="ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">🌙</button>
-      <button id="menu-toggle" class="md:hidden ml-4 p-2 rounded bg-gray-200 dark:bg-gray-700">☰</button>
-    </div>
-    <div id="mobile-menu" class="md:hidden hidden px-6 pb-4">
-      <a href="#home" class="block py-2">Home</a>
-      <a href="#about" class="block py-2">About</a>
-      <a href="projects.html" class="block py-2">Projects</a>
-      <a href="articles.html" class="block py-2">Articles</a>
-      <a href="#skills" class="block py-2">Skills</a>
-      <a href="#contact" class="block py-2">Contact</a>
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <section id="home" class="pt-32 pb-16 container mx-auto flex flex-col md:flex-row items-center justify-between gap-8" data-aos="fade-up">
-    <div class="flex-1">
-      <p class="text-lg mb-2">Halo 👋, I'm</p>
-      <h1 class="text-4xl md:text-5xl font-bold mb-2">Afiyatna N. Fauzan</h1>
-      <p class="text-xl text-purple-600 font-semibold mb-2">Semua tergantung mindset</p>
-      <p class="mb-6 text-gray-700 dark:text-gray-300">Web Developer</p>
-      <a href="#contact" class="px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Contact Me</a>
-      <div class="flex gap-4 mt-6">
-        <a href="https://www.linkedin.com/in/afiyatna-n-fauzan-3356a7230/" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
-        <a href="https://github.com/Afiyatna" class="flex items-center gap-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="w-6 h-6"> GitHub</a>
-      </div>
-    </div>
-    <div class="flex-1 flex flex-col items-center relative">
-      <img src="assets/profile.jpg" alt="Foto Profil" class="w-56 h-66 object-cover rounded-2xl shadow-xl mb-4 border-4 border-white dark:border-gray-800">
-    </div>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="py-16 bg-gray-50 dark:bg-gray-800" data-aos="fade-up">
-    <div class="container mx-auto px-4">
-      <h2 class="text-2xl font-bold mb-8">Projects</h2>
-      <div class="swiper projects-swiper">
-        <div class="swiper-wrapper" id="projects-list"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-      </div>
-      <div class="mt-6 text-center">
-        <a href="projects.html" class="inline-block px-6 py-2 bg-purple-600 text-white rounded-full shadow hover:bg-purple-700 transition dark:bg-gray-800">Lihat Semua</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Articles Section -->
-  <section id="articles" class="py-16" data-aos="fade-up">
-    <div class="container mx-auto px-4">
-      <h2 class="text-2xl font-bold mb-8">Articles</h2>
-      <div class="swiper articles-swiper">
-        <div class="swiper-wrapper" id="articles-list"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Skills Section -->
-  <section id="skills" class="py-16 bg-gray-50 dark:bg-gray-800" data-aos="fade-up">
-    <div class="container mx-auto px-4">
-      <h2 class="text-2xl font-bold mb-8">Skills</h2>
-      <div id="skills-list" class="grid grid-cols-2 md:grid-cols-4 gap-6"></div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="py-16" data-aos="fade-up">
-    <div class="container mx-auto px-4 flex flex-col md:flex-row gap-8">
-      <form id="contact-form" class="flex-1 bg-white dark:bg-gray-900 rounded-xl shadow p-8 space-y-4">
-        <h2 class="text-2xl font-bold mb-4">Contact Me</h2>
-        <input type="text" name="Nama" placeholder="Name" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
-        <input type="email" name="Email" placeholder="Email" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600" />
-        <textarea name="Pesan" placeholder="Message" required class="w-full p-3 rounded border border-gray-300 dark:bg-gray-800 dark:border-gray-600"></textarea>
-        <button type="submit" class="w-full py-3 bg-purple-600 text-white rounded-full font-semibold hover:bg-purple-700 transition">Request Now</button>
-        <div id="form-message" class="text-center mt-2"></div>
-      </form>
-      <div class="flex-1 bg-white dark:bg-gray-900 rounded-xl shadow p-8 flex flex-col items-start justify-center">
-        <h3 class="text-xl font-bold mb-4">Connect Me</h3>
-        <a href="https://www.linkedin.com/in/afiyatna-n-fauzan-3356a7230/" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" class="w-6 h-6"> LinkedIn</a>
-        <a href="https://x.com/Afiyatna_22" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/twitter/twitter-original.svg" class="w-6 h-6"> Twitter</a>
-        <a href="https://www.instagram.com/afiyatna_22/" class="flex items-center gap-2 mb-2 text-gray-700 dark:text-gray-200 hover:text-purple-600" target="_blank">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none">
-            <defs>
-              <linearGradient id="ig-gradient" x1="0" y1="0" x2="1" y2="1">
-                <stop offset="0%" stop-color="#f58529"/>
-                <stop offset="30%" stop-color="#dd2a7b"/>
-                <stop offset="60%" stop-color="#8134af"/>
-                <stop offset="100%" stop-color="#515bd4"/>
-              </linearGradient>
-            </defs>
-            <path fill="url(#ig-gradient)" d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zm4.25 3.25a5.25 5.25 0 1 1 0 10.5a5.25 5.25 0 0 1 0-10.5zm0 1.5a3.75 3.75 0 1 0 0 7.5a3.75 3.75 0 0 0 0-7.5zm5.13.88a1.13 1.13 0 1 1-2.26 0a1.13 1.13 0 0 1 2.26 0z"/>
-          </svg>
-          Instagram
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <footer class="text-center py-6 text-gray-500 dark:text-gray-400">&copy; 2025 | Portofolio Afiyatna</footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="script.js"></script>
-  <script>
-    AOS.init({ once: true });
-  </script>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url=home.html" />
+    <script>window.location.replace('home.html');</script>
+  </head>
+  <body></body>
 </html> 
